# a0-opencode-go-provider-plugin

./: .gitignore  AGENTS.md  LICENSE  README.md  execute.py  plugin.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
ci/: agent-zero.Dockerfile  find_plugin_dir.py  install_plugin_via_agent_zero.py  run_agent_zero_integration.sh  run_installed_smoke.py  run_live_provider_smoke.py
conf/: model_providers.yaml
tests/unit/: test_execute_lifecycle.py  test_provider_contract.py
webui/: config.html
